Fix for bug 170249. tree autoscroll triggers incorrectly and crashes r=mcsmurf, sr=peterv, a=blizzard